# Peer-Competitive-Analysis-Dashboard

./: .env.example  .gitignore  README.md  demo-server.err  docker-compose.yml  export_static_api.py  pyproject.toml  requirements.txt  run_demo.py
.github/workflows/: deploy.yml
.kiro/specs/freshbus-competitor-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
aggregator/: chat.py  live_bootstrap.py  metrics.py  orchestrator.py  sentiment.py  validate.py
api/: deps.py  main.py
api/routers/: export.py  health.py  history.py  metrics.py  operators.py  refresh.py  reviews.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/public/api-static/: app-store.json  google-reviews.json  history-google_play.json  history-google_reviews.json  history-ios_app_store.json  history-redbus_overall.json  operators.json  overview.json  redbus-tags.json  redbus.json  refresh-status.json  review-classification-google_play.json  (+3 more)
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  store.ts
data/: dashboard_cache.json
db/: init.sql
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.scraper  nginx.conf
infra/aws/: main.tf  variables.tf
scraper/: db.py
scraper/collectors/: app_store.py  google_reviews.py  redbus.py
scraper/config/: app_ids.json
scraper/utils/: logger.py  proxy_pool.py  retry.py  user_agents.py
tests/: test_api.py  test_app_store_collector.py  test_google_reviews_collector.py  test_metrics.py  test_orchestrator.py  test_redbus_collector.py  test_scraper_utils.py  test_sentiment.py
(+21 files in other folders)
