[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshbus-competitor-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.31",
    "structlog==24.2.0",
    "python-dotenv==1.0.1",
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "apscheduler==3.10.4",
    "playwright==1.44.0",
    "google-play-scraper==1.2.7",
    "app-store-scraper==0.3.5",
    "transformers==4.42.3",
    "torch==2.3.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]

[tool.hatch.build.targets.wheel]
packages = ["scraper", "aggregator", "api"]
